--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <div class="col-md-6">
                         <img src=" ./assets/img/honolulu.jpg" class="img-fluid h-100" alt="...">
                     </div>
-                    <div class="background col-md-6">
+                    <div class="lugar background col-md-6">
                         <div class="p-3">
                             <h3 class="">Bs As - Octubre</h3>
                             <p class="">Buenos Aires es la provincia y localidad más grande del estado de
