--- a/index.html
+++ b/index.html
@@ -12,46 +12,53 @@
 
 <body>
     <header>
-        <!-- navbar -->
-        <nav class="navbar navbar-expand-sm navbar-dark bg-gradient">
-
-            <a class="navbar-brand" href="#">
-                <img src="./assets/img/codoacodo.png" width="100%" height="60px" alt="Logo Codo a Codo">
-            </a>
-            <a class="navbar-brand" href="#"> Conf Bs As
-            </a>
-
-            <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="nav justify-content-end">
-                    <li class="nav-item  active">
-                        <a class="nav-link" href="#"><span class="sr-only">La conferencia </span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#oradores">Los oradores</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#lugar">El lugar y la fecha</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#conviertete">Conviértete en orador</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Comprar Tickets</a>
-                    </li>
-                </ul>
+        <nav class="navbar navbar-expand-xl navbar-dark bg-gradient">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="./assets/img/codoacodo.png" width="auto" height="60px" alt="Logo Codo a Codo"
+                        class="d-inline-block align-items-center">Conf Bs As
+                </a>
+                <div>
+                    <a class="navbar-brand" href="#"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo2">
+                    <div class="d-flex">
+                        <ul class="navbar-nav me-auto mb-2 mb-xl-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#oradores">Los oradores</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#lugar">El lugar y la fecha</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#conviertete">Conviértete en orador</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Comprar
+                                    Tickets</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-
         </nav>
     </header>
 
     <main>
-        <!-- banner -->
-        <section>
+        <section class="banner-s">
             <div class="card border-0">
                 <img src="./assets/img/ba1.jpg" class="card-img rounded-0" alt="...">
                 <div class="banner card-img-overlay">
                     <h1 class="card-title">Conf Bs As</h1>
-                    <p class="">Bs As llega por primera vez a Argentina. Un evento para compartir con
+                    <p>Bs As llega por primera vez a Argentina. Un evento para compartir con
                         nuestra comunidad el conocimiento y experiencia de los expertos que
                         están creando el futuro de Internet. Ven a conocer a miembros del
                         evento, a otros estudiantes de Codo a Codo y los oradores de primer
@@ -64,127 +71,148 @@
             </div>
         </section>
 
-        <!-- titleCards -->
-        <div id="oradores" class="titleCards">
-            <div>Conoce a los </div>
-            <h3>oradores</h3>
-        </div>
-
-        <!-- cards -->
-        <section class="cards">
-            <article class="card" style="width: 19rem;">
-                <img src="./assets/img/steve.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <div class="card-theme">
-                        <span class="mb-2 bg-warning text-dark">JavaScript</span>
-                        <span class="text-white">React</span>
-                    </div>
-                    <h5 class="card-title">Steve Jobs</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam veritatis, quo
-                        temporibus a ipsum rerum obcaecati nisi voluptate placeat, beatae assumenda id vitae sunt nihil
-                        dolore ad quasi quidem maiores?</p>
-                </div>
-            </article>
-
-            <article class="card" style="width: 19rem;">
-                <img src="./assets/img/bill.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <div class="card-theme">
-                        <span class="mb-2 bg-warning text-dark">JavaScript</span>
-                        <span class="text-white">React</span>
-                    </div>
-                    <h5 class="card-title">Bill Gates</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam
-                        veritatis, quo
-                        temporibus a ipsum rerum obcaecati nisi voluptate placeat, beatae assumenda id vitae sunt nihil
-                        dolore ad quasi quidem maiores?</p>
-                </div>
-            </article>
-
-            <article class="card" style="width: 19rem;">
-                <img src="./assets/img/ada.jpeg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <div class="card-theme text-white">
-                        <span class="mb-2 bg-secondary">Negocios</span>
-                        <span class="bg-danger">Startups</span>
-                    </div>
-                    <h5 class="card-title">Ada Lovelice</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam
-                        veritatis, quo
-                        temporibus a ipsum rerum obcaecati nisi voluptate placeat, beatae assumenda id vitae sunt nihil
-                        dolore ad quasi quidem maiores?</p>
-                </div>
-            </article>
+        <section class="oradores">
+            <div id="oradores" class="titleCards">
+                <div>Conoce a los </div>
+                <h3>oradores</h3>
+            </div>
         </section>
 
-        <!-- aside -->
-        <aside>
-            <div id="lugar" class="card-lugar mb-3" style="max-width: 100%;">
-                <div class="content row g-0">
-                    <div class="col-md-6">
-                        <img src=" ./assets/img/honolulu.jpg" class="img-fluid h-100" alt="...">
+        <section class="article-cards">
+            <div class="card-group mx-4 gap-4 mb-5">
+
+                <article class="card rounded w-auto">
+                    <img src="./assets/img/steve.jpg" class="card-img-top rounded-top" alt="...">
+                    <div class="card-body">
+                        <div class="card-theme">
+                            <span class="mb-2 bg-warning text-dark">JavaScript</span>
+                            <span class="text-white">React</span>
+                        </div>
+                        <h5 class="card-title">Steve Jobs</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam veritatis,
+                            quo temporibus a ipsum rerum obcaecati nisi voluptate placeat, beatae assumenda id vitae
+                            sunt nihil dolore ad quasi quidem maiores?</p>
                     </div>
-                    <div class="lugar background col-md-6">
-                        <div class="p-3">
-                            <h3 class="">Bs As - Octubre</h3>
-                            <p class="">Buenos Aires es la provincia y localidad más grande del estado de
-                                Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales
-                                ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la
-                                costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una
-                                ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km² de
-                                superficie).</p>
-                            <button type="button" class="btn btn-outline-light">Conocé más</button>
+                </article>
+
+                <article class="card border rounded w-auto">
+                    <img src="./assets/img/bill.jpg" class="card-img-top rounded-top" alt="...">
+                    <div class="card-body">
+                        <div class="card-theme">
+                            <span class="mb-2 bg-warning text-dark">JavaScript</span>
+                            <span class="text-white">React</span>
+                        </div>
+                        <h5 class="card-title">Bill Gates</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam veritatis,
+                            quo temporibus a ipsum rerum obcaecati nisi voluptate placeat, beatae assumenda id vitae
+                            sunt nihil dolore ad quasi quidem maiores?</p>
+                    </div>
+                </article>
+
+                <article class="card border rounded w-auto">
+                    <img src="./assets/img/ada.jpeg" class="card-img-top rounded-top" alt="...">
+                    <div class="card-body">
+                        <div class="card-theme text-white">
+                            <span class="mb-2 bg-secondary">Negocios</span>
+                            <span class="bg-danger">Startups</span>
+                        </div>
+                        <h5 class="card-title">Ada Lovelice</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam veritatis,
+                            quo temporibus a ipsum rerum obcaecati nisi voluptate placeat, beatae assumenda id vitae
+                            sunt nihil dolore ad quasi quidem maiores?</p>
+                    </div>
+                </article>
+
+            </div>
+        </section>
+
+        <section class="aside">
+            <aside>
+                <div id="lugar" class="card-lugar mb-3" style="max-width: 100%;">
+                    <div class="content row g-0">
+                        <div class="col-md-6">
+                            <img src=" ./assets/img/honolulu.jpg" class="img-fluid h-100" alt="...">
+                        </div>
+                        <div class="lugar background col-md-6">
+                            <div class="p-3">
+                                <h3 class="">Bs As - Octubre</h3>
+                                <p class="">Buenos Aires es la provincia y localidad más grande del estado de
+                                    Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales
+                                    ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en
+                                    la
+                                    costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una
+                                    ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km² de
+                                    superficie).</p>
+                                <button type="button" class="btn btn-outline-light">Conocé más</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </aside>
+            </aside>
+        </section>
 
+        <section class="orador">
+            <div id="conviertete" class="titleCards">
+                <div>Coonviértete en un </div>
+                <h3>orador</h3>
+            </div>
+            <div class="titleCards lowercase fw-semibold">
+                <p>Anótate como orador para dar una <a href="#">charla ignite</a>. ¡Cuéntanos de que quieres hablar!</p>
+            </div>
+        </section>
+
+        <section class="formulario">
+            <form action="">
+                <div class="row">
+                    <div class="col">
+                        <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
+                    </div>
+                    <div class="col">
+                        <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name">
+                    </div>
+                </div>
+                <div class="form-floating">
+                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+                        style="height: 100px"></textarea>
+                    <label class="text-secondary fs-5" for="floatingTextarea2">¿Sobre qué quieres
+                        hablar?</label>
+                </div>
+                <p class="text-secondary">Recuerda incluir un titulo para tu charla</p>
+                <button type="button" class="btn-light">Enviar</button>
+            </form>
+        </section>
+
+        <section class="footer">
+            <footer class="d-flex">
+                <nav class="container-fluid p-3">
+                    <div class="row justify-content-evenly align-items-center">
+                        <div class="p-0 col-auto">
+                            <a class="ps-5 text-white text-decoration-none" href="#">Preguntas frecuentes</a>
+                        </div>
+                        <div class="p-0 col-auto">
+                            <a class="text-white text-decoration-none" href="#">Contáctenos</a>
+                        </div>
+                        <div class="p-0 col-auto">
+                            <a class="text-white text-decoration-none" href="#">Prensa</a>
+                        </div>
+                        <div class="p-0 col-auto">
+                            <a class="text-white text-decoration-none" href="#">Conferencias</a>
+                        </div>
+                        <div class="p-0 col-auto">
+                            <a class="text-white text-decoration-none" href="#">Términos y condiciones</a>
+                        </div>
+                        <div class="p-0 col-auto">
+                            <a class="text-white text-decoration-none" href="#">Privacidad</a>
+                        </div>
+                        <div class="p-0 col-auto">
+                            <a class="pe-5 text-white text-decoration-none" href="#" tabindex="-1"
+                                aria-disabled="true">Estudiantes</a>
+                        </div>
+                    </div>
+                </nav>
+            </footer>
+        </section>
     </main>
-
-    <!-- titleCards -->
-    <div id="conviertete" class="titleCards">
-        <div>Coonviértete en un </div>
-        <h3>orador</h3>
-    </div>
-    <div class="titleCards lowercase fw-semibold">
-        <p>Anótate como orador para dar una <a href="#">charla ignite</a>. ¡Cuéntanos de que quieres hablar!</p>
-    </div>
-
-    <!-- form -->
-    <section class="form">
-        <form action="">
-            <div class="row">
-                <div class="col">
-                    <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
-                </div>
-                <div class="col">
-                    <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name">
-                </div>
-            </div>
-            <div class="form-floating">
-                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
-                    style="height: 100px"></textarea>
-                <label class="text-secondary fs-5" for="floatingTextarea2">¿Sobre qué quieres
-                    hablar?</label>
-            </div>
-            <p class="text-secondary">Recuerda incluir un titulo para tu charla</p>
-            <button type="button" class="btn-light">Enviar</button>
-        </form>
-    </section>
-
-    <!-- footer -->
-    <footer>
-        <ul>
-            <li><a href="">Preguntas frecuentes</a></li>
-            <li><a href="">Contáctenos</a></li>
-            <li><a href="">Prensa</a></li>
-            <li><a href="">Conferencias</a></li>
-            <li><a href="">Términos y condiciones</a></li>
-            <li><a href="">Privacidad</a></li>
-            <li><a href="">Estudiantes</a></li>
-        </ul>
-    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
