--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <a class="nav-link" href="#conviertete">Conviértete en orador</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Comprar
+                                <a class="nav-link disabled" href="#">Comprar
                                     Tickets</a>
                             </li>
                         </ul>
@@ -184,7 +184,7 @@
 
         <section class="footer">
             <footer class="d-flex">
-                <nav class="container-fluid p-3">
+                <form class="container-fluid p-3">
                     <div class="row justify-content-evenly align-items-center">
                         <div class="p-0 col-auto">
                             <a class="ps-5 text-white text-decoration-none" href="#">Preguntas frecuentes</a>
@@ -209,7 +209,7 @@
                                 aria-disabled="true">Estudiantes</a>
                         </div>
                     </div>
-                </nav>
+                </form>
             </footer>
         </section>
     </main>
