--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-xl navbar-dark bg-gradient">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="./assets/img/codoacodo.png" width="auto" height="60px" alt="Logo Codo a Codo"
+                    <img src="./src/assets/img/codoacodo.png" width="auto" height="60px" alt="Logo Codo a Codo"
                         class="d-inline-block align-items-center">Conf Bs As
                 </a>
                 <div>
@@ -39,10 +39,11 @@
                                 <a class="nav-link" href="#lugar">El lugar y la fecha</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#conviertete">Conviértete en orador</a>
+                                <a class="nav-link" href="#conviertete">Conviértete en
+                                    orador</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" href="#">Comprar
+                                <a class="nav-link" href="./src/pages/comprarTickets.html" target="_blank">Comprar
                                     Tickets</a>
                             </li>
                         </ul>
@@ -55,7 +56,7 @@
     <main>
         <section class="banner-s">
             <div class="card border-0">
-                <img src="./assets/img/ba1.jpg" class="card-img rounded-0" alt="...">
+                <img src="./src/assets/img/ba1.jpg" class="card-img rounded-0" alt="...">
                 <div class="banner card-img-overlay">
                     <h1 class="card-title">Conf Bs As</h1>
                     <p>Bs As llega por primera vez a Argentina. Un evento para compartir con
@@ -82,7 +83,7 @@
             <div class="card-group mx-4 gap-4 mb-5">
 
                 <article class="card rounded w-auto">
-                    <img src="./assets/img/steve.jpg" class="card-img-top rounded-top" alt="...">
+                    <img src="./src/assets/img/steve.jpg" class="card-img-top rounded-top" alt="...">
                     <div class="card-body">
                         <div class="card-theme">
                             <span class="mb-2 bg-warning text-dark">JavaScript</span>
@@ -96,7 +97,7 @@
                 </article>
 
                 <article class="card border rounded w-auto">
-                    <img src="./assets/img/bill.jpg" class="card-img-top rounded-top" alt="...">
+                    <img src="./src/assets/img/bill.jpg" class="card-img-top rounded-top" alt="...">
                     <div class="card-body">
                         <div class="card-theme">
                             <span class="mb-2 bg-warning text-dark">JavaScript</span>
@@ -110,7 +111,7 @@
                 </article>
 
                 <article class="card border rounded w-auto">
-                    <img src="./assets/img/ada.jpeg" class="card-img-top rounded-top" alt="...">
+                    <img src="./src/assets/img/ada.jpeg" class="card-img-top rounded-top" alt="...">
                     <div class="card-body">
                         <div class="card-theme text-white">
                             <span class="mb-2 bg-secondary">Negocios</span>
@@ -131,7 +132,7 @@
                 <div id="lugar" class="card-lugar mb-3" style="max-width: 100%;">
                     <div class="content row g-0">
                         <div class="col-md-6">
-                            <img src=" ./assets/img/honolulu.jpg" class="img-fluid h-100" alt="...">
+                            <img src="./src/assets/img/honolulu.jpg" class="img-fluid h-100" alt="...">
                         </div>
                         <div class="lugar background col-md-6">
                             <div class="p-3">
