--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Trabajo PI</title>
+    <title>Conf Bs As</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -43,7 +43,7 @@
                                     orador</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./src/pages/comprarTickets.html" target="_blank">Comprar
+                                <a class="nav-link" href="./src/pages/index.html" target="_blank">Comprar
                                     Tickets</a>
                             </li>
                         </ul>
