--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                     orador</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./src/pages/index.html" target="_blank">Comprar
+                                <a class="nav-link" href="src/pages/index.html" target="_blank">Comprar
                                     Tickets</a>
                             </li>
                         </ul>
